[package]
name = 'scoop-searchr'
description = 'Alternative scoop search'
version = '0.1.0'
edition = '2021'
authors = ['Blair Noctis <n@sail.ng>']
repository = 'https://github.com/nc7s/scoop-searchr'
license = 'BSD-3-Clause'

[dependencies]
anyhow = '1.0'
directories = '5.0'
serde = { version = '1.0', default-features = false, features = ['derive'] }
serde_json = '1.0'
